--- a/Visual Design and Web Development.html
+++ b/Visual Design and Web Development.html
@@ -6,18 +6,17 @@
   <link href="https://fonts.google.com">
   <link  href="visualdesign.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"></a>
-        <div class="container"></div>
-        <div class="jumbotron"></div>
+        <a class="navbar-brand" href="#"> <img src="img/logo.png" class="logo" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Services</a>
                 </li>
@@ -35,7 +34,23 @@
         </div>
     </div>
 </nav>
-
-
+<div>
+    <div class="text" style="width: 45rem; font-size: 6em; text-align: center;">
+        VISUAL DESIGN & WEB DEVELOPMENT
+    </div>
+</div>
+<div>
+    <div class="text" style="width: 45rem; font-size: 3em; text-align: center;">
+        FROM PARK CITY, UTAH
+    </div>
+    <div class="container">
+        <div class="row row-cols-2">
+            <div class="holder h1"></div>
+            <div class="holder h2"></div>
+            <div class="holder h3"></div>
+            <div class="holder h4"></div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
