--- a/Visual Design and Web Development.html
+++ b/Visual Design and Web Development.html
@@ -7,6 +7,7 @@
   <link  href="visualdesign.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
+    <link rel="stylesheet" href="https://www.madtype.com/css?family=Abel">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -44,12 +45,20 @@
         FROM PARK CITY, UTAH
     </div>
     <div class="container">
-        <div class="row row-cols-2">
-            <div class="holder h1"></div>
-            <div class="holder h2"></div>
-            <div class="holder h3"></div>
-            <div class="holder h4"></div>
+        <div class="cards">
+            <div class="rounded-circle" style="margin: auto; color: white; border-style: solid;background: #EE6655; flex-direction: column; width: 105px; height: 105px">DESIGN</div>
+            <div class="rounded-circle" style="margin: auto; color: white; border-style: solid;background: #EB9D3A; flex-direction: column; width: 105px; height: 105px">DEVELOP</div>
+            <div class="rounded-circle" style="margin: auto; color: white; border-style: solid;background: #7CB06C; flex-direction: row; width: 105px; height: 105px">SUPPORT</div>
+            <div class="rounded-circle" style="margin: auto; color: white; border-style: solid;background: #00ABA9; flex-direction: row; width: 105px; height: 105px">HOST</div>
         </div>
+    </div>
+    <div>
+        <div class="selected-work" style="margin: auto; padding-top: 3em; width: 45rem; font-size: 1em; text-align: center;">
+            SELECTED WORK
+</div>
+        <div class="container">
+            <div class="featured">
+
     </div>
 </div>
 </body>
