--- a/Visual Design and Web Development.html
+++ b/Visual Design and Web Development.html
@@ -10,7 +10,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"></a>
+        <a class="navbar-brand" href="#"><img src="img/logo.png"class="logo"alt=""></a>
         <div class="container"></div>
         <div class="jumbotron"></div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
