Visual Design Project

--- a/Visual Design and Web Development.html
+++ b/Visual Design and Web Development.html
@@ -57,14 +57,24 @@
     </div>
     <div>
         <div class="col-12">
-        <h4 class="selected-work" style="font-size: 1.5em">SELECTED WORK</h4>
+        <h4 class="selected-work" style="font-size: 1em">SELECTED WORK</h4>
         </div>
         <div class="container">
             <div class="featured">
             </div>
             </div>
+        <div class="container">
+        <img src="img/apple-ipad.jpg" style="width: 550px; height:350px; padding-left: 50px; padding-top: 50px; padding-right: 40px; margin: auto; color:lightgrey; border-style: solid; background: #E6E6E6"><br>
+            <h4 class="selected-work" style="font-size: 1em">FEATURED PROJECT</h4>
+        <img src="img/macbook.jpg"  style="width: 550px; height:350px; padding-left: 50px; padding-top: 50px; padding-right: 40px"><br>
+            <h4 class="selected-work" style="font-size: 1em">FEATURED PROJECT</h4>
+        <img src="img/man.jpg" style="width: 550px; height:350px; padding-left: 50px; padding-top: 50px; padding-right: 40px"><br>
+            <h4 class="selected-work" style="font-size: 1em">FEATURED PROJECT</h4>
+        <img src="img/security.jpg" style="width: 550px; height:350px; padding-left: 50px; padding-top: 50px; padding-right: 40px"><br>
+            <h4 class="selected-work" style="font-size: 1em">FEATURED PROJECT</h4>
+        </div>
         </div>
     </div>
-</body>
+    </body>
 </html>
 
