--- a/Visual Design and Web Development.html
+++ b/Visual Design and Web Development.html
@@ -43,8 +43,8 @@
 
             <div class="col-12">
                 <h4 class="text" style="font-size: 2em; font-weight: bolder; font-family: Anton">FROM PARK CITY, UTAH</h4>
-            </div>
         </div>
+    </div>
     </div>
     <div class="container">
         <div class="row">
@@ -59,22 +59,50 @@
         <div class="col-12">
         <h4 class="selected-work" style="font-size: 1em">SELECTED WORK</h4>
         </div>
-        <div class="container">
-            <div class="featured">
-            </div>
-            </div>
-        <div class="container">
-        <img src="img/apple-ipad.jpg" style="width: 550px; height:350px; padding-left: 50px; padding-top: 50px; padding-right: 40px; margin: auto; color:lightgrey; border-style: solid; background: #E6E6E6"><br>
-            <h4 class="selected-work" style="font-size: 1em">FEATURED PROJECT</h4>
-        <img src="img/macbook.jpg"  style="width: 550px; height:350px; padding-left: 50px; padding-top: 50px; padding-right: 40px"><br>
-            <h4 class="selected-work" style="font-size: 1em">FEATURED PROJECT</h4>
-        <img src="img/man.jpg" style="width: 550px; height:350px; padding-left: 50px; padding-top: 50px; padding-right: 40px"><br>
-            <h4 class="selected-work" style="font-size: 1em">FEATURED PROJECT</h4>
-        <img src="img/security.jpg" style="width: 550px; height:350px; padding-left: 50px; padding-top: 50px; padding-right: 40px"><br>
-            <h4 class="selected-work" style="font-size: 1em">FEATURED PROJECT</h4>
-        </div>
-        </div>
-    </div>
+        <div class="flex-container">
+                <div class="container">
+            <img src="img/apple-ipad.jpg" class="rounded" alt="..." style="height: 350px; width: 550px"><br>
+                    <h4>FEATURED PROJECT</h4>
+                            <div class="row">
+                                            <div class="project1">
+                                                <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EE6655; width: 50px; height: 50px; border-color: white">D</div>
+                                                <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EB9D3A; width: 50px; height: 50px; border-color: white">D</div>
+                                                <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #7CB06C; width: 50px; height: 50px; border-color: white">S</div>
+                                                <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #00ABA9; width: 50px; height: 50px; border-color: white">H</div>
+                                            </div>
+                                            <div class="container">
+                                                <img src="img/macbook.jpg" class="rounded" alt="..." style="height: 350px; width: 550px"><br>
+                                                <h4>FEATURED PROJECT</h4>
+                                            <div class="row">
+                                                <div class="project2">
+                                                    <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EE6655; width: 50px; height: 50px; border-color: white">D</div>
+                                                    <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EB9D3A; width: 50px; height: 50px; border-color: white">D</div>
+                                                    <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #7CB06C; width: 50px; height: 50px; border-color: white">S</div>
+                                                    <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #00ABA9; width: 50px; height: 50px; border-color: white">H</div>
+                                                </div>
+                                                <div class="container">
+                                                    <img src="img/man.jpg" class="rounded" alt="..." style="height: 350px; width: 550px"><br>
+                                                    <h4>FEATURED PROJECT</h4>
+                                                    <div class="row">
+                                                    <div class="project3">
+                                                        <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EE6655; width: 50px; height: 50px; border-color: white">D</div>
+                                                        <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EB9D3A; width: 50px; height: 50px; border-color: white">D</div>
+                                                        <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #7CB06C; width: 50px; height: 50px; border-color: white">S</div>
+                                                        <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #00ABA9; width: 50px; height: 50px; border-color: white">H</div>
+                                                    </div>
+                                                    <div class="container">
+                                                        <img src="img/macbook.jpg" class="rounded" alt="..." style="height: 350px; width: 550px"><br>
+                                                        <h4>FEATURED PROJECT</h4>
+                                                    <div class="row">
+                                                        <div class="project4">
+                                                            <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EE6655; width: 50px; height: 50px; border-color: white">D</div>
+                                                            <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EB9D3A; width: 50px; height: 50px; border-color: white">D</div>
+                                                            <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #7CB06C; width: 50px; height: 50px; border-color: white">S</div>
+                                                            <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #00ABA9; width: 50px; height: 50px; border-color: white">H</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                </div>
     </body>
 </html>
 
