Visual Design and Web Development project

--- a/Visual Design and Web Development.html
+++ b/Visual Design and Web Development.html
@@ -62,47 +62,49 @@
         <div class="flex-container">
                 <div class="container">
             <img src="img/apple-ipad.jpg" class="rounded" alt="..." style="height: 350px; width: 550px"><br>
-                    <h4>FEATURED PROJECT</h4>
+                    <h4>FEATURED PROJECT</h4><div class="flex-container">
                             <div class="row">
                                             <div class="project1">
-                                                <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EE6655; width: 50px; height: 50px; border-color: white">D</div>
-                                                <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EB9D3A; width: 50px; height: 50px; border-color: white">D</div>
-                                                <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #7CB06C; width: 50px; height: 50px; border-color: white">S</div>
-                                                <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #00ABA9; width: 50px; height: 50px; border-color: white">H</div>
+                                                <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EE6655; width: 50px; height: 50px;border-color: #E6E6E6">D</div>
+                                                <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EB9D3A; width: 50px; height: 50px; border-color: #E6E6E6">D</div>
+                                                <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #7CB06C; width: 50px; height: 50px; border-color: #E6E6E6">S</div>
+                                                <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #00ABA9; width: 50px; height: 50px; border-color: #E6E6E6">H</div>
                                             </div>
                                             <div class="container">
                                                 <img src="img/macbook.jpg" class="rounded" alt="..." style="height: 350px; width: 550px"><br>
-                                                <h4>FEATURED PROJECT</h4>
+                                                <h4>FEATURED PROJECT</h4><div class="flex-container">
                                             <div class="row">
                                                 <div class="project2">
-                                                    <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EE6655; width: 50px; height: 50px; border-color: white">D</div>
-                                                    <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EB9D3A; width: 50px; height: 50px; border-color: white">D</div>
-                                                    <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #7CB06C; width: 50px; height: 50px; border-color: white">S</div>
-                                                    <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #00ABA9; width: 50px; height: 50px; border-color: white">H</div>
+                                                    <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EE6655; width: 50px; height: 50px; border-color: #E6E6E6">D</div>
+                                                    <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EB9D3A; width: 50px; height: 50px; border-color: #E6E6E6">D</div>
+                                                    <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #7CB06C; width: 50px; height: 50px; border-color: #E6E6E6">S</div>
+                                                    <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #00ABA9; width: 50px; height: 50px; border-color: #E6E6E6">H</div>
                                                 </div>
                                                 <div class="container">
                                                     <img src="img/man.jpg" class="rounded" alt="..." style="height: 350px; width: 550px"><br>
-                                                    <h4>FEATURED PROJECT</h4>
+                                                    <h4>FEATURED PROJECT</h4><div class="flex-container">
                                                     <div class="row">
                                                     <div class="project3">
-                                                        <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EE6655; width: 50px; height: 50px; border-color: white">D</div>
-                                                        <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EB9D3A; width: 50px; height: 50px; border-color: white">D</div>
-                                                        <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #7CB06C; width: 50px; height: 50px; border-color: white">S</div>
-                                                        <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #00ABA9; width: 50px; height: 50px; border-color: white">H</div>
+                                                        <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EE6655; width: 50px; height: 50px; border-color: #E6E6E6">D</div>
+                                                        <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EB9D3A; width: 50px; height: 50px; border-color: #E6E6E6">D</div>
+                                                        <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #7CB06C; width: 50px; height: 50px; border-color: #E6E6E6">S</div>
+                                                        <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #00ABA9; width: 50px; height: 50px; border-color: #E6E6E6">H</div>
                                                     </div>
                                                     <div class="container">
                                                         <img src="img/macbook.jpg" class="rounded" alt="..." style="height: 350px; width: 550px"><br>
-                                                        <h4>FEATURED PROJECT</h4>
-                                                    <div class="row">
+                                                        <h4>FEATURED PROJECT</h4><div class="flex-container">
+                                                        <div class="row">
                                                         <div class="project4">
-                                                            <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EE6655; width: 50px; height: 50px; border-color: white">D</div>
-                                                            <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EB9D3A; width: 50px; height: 50px; border-color: white">D</div>
-                                                            <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #7CB06C; width: 50px; height: 50px; border-color: white">S</div>
-                                                            <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #00ABA9; width: 50px; height: 50px; border-color: white">H</div>
+                                                            <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EE6655; width: 50px; height: 50px; border-color: #E6E6E6">D</div>
+                                                            <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #EB9D3A; width: 50px; height: 50px; border-color: #E6E6E6">D</div>
+                                                            <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #7CB06C; width: 50px; height: 50px; border-color: #E6E6E6">S</div>
+                                                            <div class="rounded-circle" style="margin: 0 -3px; color: black; border-style: solid;background: #00ABA9; width: 50px; height: 50px; border-color: #E6E6E6">H</div>
                                                         </div>
                                                     </div>
                                                 </div>
                                                 </div>
-    </body>
+                                                    </div>
+
+</body>
 </html>
 
